/** 5.5.9 */